# walrs

./: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
JSON/: foodData2.json
backend/: db.js  index.js  package.json
backend/models/: Orders.js  User.js
backend/routes/: CreateUser.js  DisplayData.js  OrderData.js
public/: index.html
src/: App.js  image.rs  index.css  lib.rs  main.rs  palette.rs
src/components/: Card.jsx  Carousel.jsx  Cart.jsx  ContextReducer.js  Footer.jsx  Heading.jsx  Video.jsx  navigation.jsx
src/screen/: Home.jsx  Login.jsx  Myorder.jsx  Signup.jsx
