[package]
name = "walrs"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal pywal-like theme generator written in Rust."
license = "UNILICENSE"
repository = "https://github.com/itismeherb/walrs"
homepage = "https://github.com/itismeherb/walrs"
documentation = "https://github.com/itismeherb/walrs"

[package.metadata.release]
sign-commit = false
push = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
allow-branch = ["master"]
publish = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
